--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine on
 RewriteBase /ipaw 
-RewriteCond $1 !^(index\.php|images|js|css|php-scripts|robots\.txt)
+RewriteCond $1 !^(index\.php|assets|images|js|css|php-scripts|robots\.txt)
 RewriteRule ^(.*)$ index.php/$1 [L]
